# artgod

./: .dockerignore  .env.deploy.example  .env.example  .env.test.example  .gitignore  .yarnrc.yml  AGENTS.md  CLAUDE.md  Caddyfile.deploy  Dockerfile.deploy  IDEA.md  README.md  docker-compose.deploy.yml  docker-compose.yml  package.json  tsconfig.json
.github/: FUNDING.yml
.github/workflows/: dependency-security-check.yml  tauri-build-check.yml  tauri-release.yml  tauri-repro-check.yml
backend/: .gitignore  package.json  tsconfig.json  vitest.config.ts
backend/src/: api.test.ts  config.test-fixture.ts  config.test.ts  config.ts  http-app.ts  http-routes.ts  index.ts
config/: cargo-age-gate.json  settings.manifest.toml  tauri-linux-bundler-tools.json
database/: README.md  package.json
database/migrations/: 001_initial_schema.sql  002_indexer_schema.sql  003_orders_schema.sql  004_metadata_schema.sql  005_activities_schema.sql  006_fills_schema.sql  007_collections_schema.sql  008_bootstrap_schema.sql  009_seaport_conduits.sql  010_token_sets_schema.sql  011_collection_trait_stats.sql  012_bootstrap_metadata_snapshot.sql  013_chains_schema.sql  014_bootstrap_runs.sql  015_opensea_offchain_schema.sql  016_offchain_source_scope.sql  017_collection_extensions_schema.sql  018_collection_customization_features.sql  019_trading_jobs_schema.sql  020_trading_bidding_bid_book_schema.sql  021_orders_bidding_offer_shape.sql  022_trading_bot_runtime_state.sql  023_trading_bid_book_offer_display_fields.sql  024_collection_extension_events.sql  025_collection_extension_event_media.sql  026_trading_bidding_price_tiers.sql  027_trading_bidding_job_pricing_metadata.sql  028_collection_settings_and_trading_bidding_tier_delta.sql  029_activity_feed_query_indexes.sql  029_allow_shared_bidding_price_tier_parents.sql  030_tokens_numeric_sort_keys.sql  031_nft_balance_owner_token_candidates.sql  032_collection_sync_blocks.sql  032_token_image_cache.sql  033_bidding_job_runtime_bid_decision.sql  034_orders_maker_revalidation_candidates.sql  035_orders_maker_collection_revalidation.sql  036_token_image_cache.sql  037_bootstrap_ownership_snapshot_tasks.sql  038_bootstrap_collection_extension_artifact_tasks.sql  (+17 more)
database/scripts/: backfill.ts  export.ts
docs/: backend-api.openapi.yaml  indexer-progress.md
docs-archive/blueprint/: 02-sync-pipeline.md  03-data-structures.md  04-job-queueing.md  05-offchain-indexing.md  07-fills-decoding.md  08-token-sets-and-multi-trait-orders.md
docs/blueprint/: 01-architecture-overview.md  02-sync-pipeline.md  03-data-structures.md  04-job-queueing.md  05-offchain-indexing.md  06-fault-tolerance.md  (+2 more)
frontend/: package.json  playwright.attached.config.ts  playwright.bidding-authorization.config.ts  playwright.bidding-automation-public.config.ts  playwright.bidding-automation.config.ts  playwright.bootstrap-probe.config.ts  playwright.terraforms-hypercastle.config.ts  svelte.config.js  vite.config.ts
indexer/: package.json  tsconfig.json  vitest.config.ts  vitest.workspace.ts
landing-worker/: README.md  wrangler.toml
scripts/: backend-dev.sh  build.sh  check-observability-log-ingestion.sh  dev.sh  dump-tx.js  frontend-dev.sh  indexer-dev.sh  publish-offchain-order.ts
shared/: package.json  tsconfig.json
src-tauri/: .gitignore  Cargo.toml  build.rs  tauri.conf.json  tauri.linux.conf.json
src-tauri/capabilities/: default.json
src-tauri/crates/artgod-secret-prompt-protocol/: Cargo.toml
src-tauri/crates/artgod-secret-prompt-protocol/src/: lib.rs
src-tauri/crates/artgod-sensitive-process/: Cargo.toml
src-tauri/crates/artgod-sensitive-process/src/: lib.rs
src-tauri/icons/: icon.icns
src-tauri/sidecars/artgod-secret-prompt/: Cargo.toml  build.rs
src-tauri/sidecars/artgod-secret-prompt/assets/fonts/: cozettecrossedseven_hidpi.bdf
src-tauri/sidecars/artgod-secret-prompt/src/: generated_font.rs  main.rs  owner_liveness.rs  prompt_ui.rs
src-tauri/sidecars/artgod-secret-prompt/tests/: retired_env_response.rs
src-tauri/src/: desktop_log.rs  lib.rs  private_file.rs
src-tauri/src/runtime/: app_config.rs  app_config_manifest.rs  backend_collection_catalog.rs  bidding_mandate.rs  bot_lifecycle.rs  bot_runtime.rs  config.rs  env_keys.rs  http_fetch_resilience.rs  log_files.rs  mod.rs  private_file.rs  process_containment.rs  process_registry.rs  resource_contract.rs  rpc_auto_sourcing.rs  runtime_integrity.rs  supervisor.rs
src-tauri/src/runtime/chainlist/: ethereum-rpcs.json
src-tauri/src/wallet/: mod.rs  tests.rs
src-tauri/src/wallet/application/use_cases/: assign_wallet_to_bot.rs  export_wallet.rs  import_wallet.rs  list_wallets.rs  mod.rs  remove_wallet.rs  unlock_wallet_for_bot_start.rs
src-tauri/src/wallet/domain/: mod.rs  passphrase_policy.rs  wallet.rs
src-tauri/src/wallet/infra/: mod.rs
src-tauri/src/wallet/infra/keystore/: alloy_keystore.rs  mod.rs
src-tauri/src/wallet/infra/keystore/fixtures/: foundry-keystore-v3.json
src-tauri/src/wallet/infra/prompt/: mod.rs  secret_prompt_sidecar.rs
src-tauri/src/wallet/infra/storage/: fs_wallet_store.rs  mod.rs
src-tauri/src/wallet/tauri/: bot_commands.rs  commands.rs  mod.rs
src-tauri/tests/: linux_runtime_resource_layout.rs  tauri_runtime_output_reconciliation.rs  webview_capability_security.rs
src-tauri/tests/fixtures/: secret-prompt-process-fixture-contract.json  secret-prompt-process-fixture.mjs
trading/: package.json  tsconfig.json
(+1246 files in other folders)
