[package]
name = "artgod-desktop"
version = "0.0.1-pre-alpha.28"
license = "AGPL-3.0-only"
repository = "https://github.com/d347h-eth/artgod"
edition = "2024"
rust-version = "1.93.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.5", features = [] }

[dependencies]
alloy-primitives = "1.4.1"
alloy-signer-local = { version = "1.8.3", default-features = false, features = ["keystore", "zeroize"] }
artgod-secret-prompt-protocol = { path = "crates/artgod-secret-prompt-protocol" }
rand = "0.8"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.2", features = ["tray-icon"] }
tauri-plugin-log = "2.7.1"
tauri-plugin-shell = "2.3.5"
thiserror = "2.0"
time = { version = "0.3", features = ["formatting"] }
toml = "0.8"
uuid = { version = "1.18.1", features = ["serde", "v4"] }
zeroize = { version = "1.8", features = ["alloc"] }

[dev-dependencies]
tempfile = "3.20"
