[package]
name = "artgod-desktop"
version = "0.1.1-alpha.3"
license = "AGPL-3.0-only"
repository = "https://github.com/d347h-eth/artgod"
edition = "2024"
rust-version = "1.93.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
serde_json = "1.0"
sha2 = "0.10"
tauri-build = { version = "2.6.3", features = [] }

[dependencies]
alloy-primitives = "1.4.1"
alloy-signer-local = { version = "1.8.3", default-features = false, features = ["keystore", "zeroize"] }
artgod-secret-prompt-protocol = { path = "crates/artgod-secret-prompt-protocol" }
artgod-sensitive-process = { path = "crates/artgod-sensitive-process" }
eth-keystore = { version = "0.5.0", default-features = false }
futures-util = "0.3"
log = "0.4"
rand = "0.8.6"
reqwest = { version = "0.13.2", default-features = false, features = ["json", "native-tls-no-alpn", "query"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
tauri = { version = "2.11.3", features = ["tray-icon"] }
tauri-plugin-log = "2.8.0"
tauri-plugin-shell = "2.3.5"
thiserror = "2.0"
time = { version = "0.3", features = ["formatting"] }
toml = "0.8"
uuid = { version = "1.18.1", features = ["serde", "v4"] }
zeroize = { version = "1.8", features = ["alloc"] }

[dev-dependencies]
tauri = { version = "2.11.3", features = ["test"] }
tempfile = "3.20"

[patch.crates-io]
# Use the source-pinned parameterized writer until upstream exposes KDF work settings.
eth-keystore = { path = "vendor/eth-keystore" }

[profile.dev.package.scrypt]
# Keep production-strength wallet unlock practical in unoptimized desktop builds.
opt-level = 3

[profile.test.package.scrypt]
# Exercise production KDF parameters in tests without debug-mode scrypt latency.
opt-level = 3
