[package]
name = "artgod-sensitive-process"
version = "0.0.1"
edition = "2024"
license = "AGPL-3.0-only"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_ErrorReporting",
    "Win32_System_JobObjects",
    "Win32_System_Threading",
] }

[dev-dependencies]
tempfile = "3.20"
